welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:4: error: '<-' expected but ')' found.
     	 	     for(i<6 to 1){
                                 ^Methods:10: error: illegal start of simple expression
     }
     ^