welcome.lessons.welcome.methods.basics.Methods.scala.code

     	 def goAndGet() {
     	 	     for(i<6 to 1){
     	 	     	i=i+1
        	prendBiscuit();
        	recule();
        	poseBiscuit();
        }
     }
       
    